alteracoes no javascript

--- a/index.html
+++ b/index.html
@@ -8,11 +8,21 @@
 <body>
     <main>
         <div>
-            <p id="location">Europe / London</p>
+            <p id="location">America / Sao Paulo</p>
+            
         </div>
         <h1 id="time">00:00:00</h1>
-        <h2 id="date">monday, 1 May, 2023</h2>
+        <h2 id="date">Fri, Jan 1, 2000</h2>
     </main>
+
+<hr>
+    <div>
+        <p>Change timezone</p>
+        <select id="timezone">
+            
+        </select>
+    </div>
+
     <script src="bundle.js"></script>
 </body>
 </html>
