--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
 
 
-  <title>Document</title>
+  <title>Time Zone Now</title>
 </head>
 
 <body>
